--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "@types/node": "^12.12.50",
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.7.5",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-redux-thunk": "^2.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
