--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
   - docker build -t vincentzl/weather-app-frontend -f Dockerfile.dev .
 script:
   - docker run -e CI=true vincentzl/weather-app-frontend npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "weather-app-vincent-jr"
+  env: "Weatherappvincentjr-env"
+  bucket_name: "elasticbeanstalk-us-east-2-218664566765"
+  bucket_path: "weather-app-vincent-jr"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
